kube/stage/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: 581456186916.dkr.ecr.us-east-1.amazonaws.com/rhonda-admin-api
          ports:
            - containerPort: 80
              name: http            
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "250m"                
 #         envFrom:
 #           - secretRef:
 #               name: differentlikeyou
 #     imagePullSecrets:
 #       - name: dnt-dockerhub
