kube/stage/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
#  type: ClusterIP
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: web
